--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-flexbox-grid": "^2.0.0",
     "react-flip-move": "^2.9.2",
     "react-google-charts": "^1.6.0",
+    "react-google-maps": "^9.4.5",
     "react-grid-layout": "^0.16.2",
     "react-instantsearch": "^4.0.7",
     "react-intl": "^2.3.0",
