components added and code cleand ed

--- a/package.json
+++ b/package.json
@@ -68,10 +68,9 @@
     "react-test-renderer": "^16.2.0",
     "react-throttle": "^0.3.0",
     "react-trend": "^1.2.3",
-    "react-vis": "^1.7.2",
     "react-window-size-listener": "^1.0.10",
     "react-youtube": "^7.4.0",
-    "recharts": "^1.0.0-alpha.2",
+    "recharts": "^1.6.2",
     "redux": "^3.6.0",
     "redux-devtools": "^3.3.2",
     "redux-devtools-dock-monitor": "^1.1.1",
