--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clone": "^2.1.1",
     "crypto-js": "^3.1.9-1",
     "d3-shape": "^1.0.6",
+    "dotenv": "^8.1.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-react-intl": "^1.4.8",
     "express": "^4.15.3",
