--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "isomorphic",
+  "name": "Cargappp",
   "version": "2.9.4",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^1.6.0",
     "antd": "^3.10.0",
     "antd-local-icon": "^0.1.3",
     "auth0-lock": "^11.1.2",
