--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-google-charts": "^1.6.0",
     "react-google-maps": "^9.4.5",
     "react-grid-layout": "^0.16.2",
+    "react-highlight-words": "^0.16.0",
     "react-instantsearch": "^4.0.7",
     "react-intl": "^2.3.0",
     "react-loadable": "^5.5.0",
