--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-chartjs-2": "^2.5.7",
     "react-codemirror": "^1.0.0",
     "react-count-down": "^1.1.0",
+    "react-credit-card-input": "^1.1.5",
     "react-dates": "12.2.4",
     "react-dnd": "^2.3.0",
     "react-dnd-html5-backend": "^2.3.0",
