--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-react-intl": "^1.4.8",
     "express": "^4.15.3",
-    "firebase": "^5.2.0",
+    "firebase": "^7.5.0",
     "frappe-charts": "^0.0.8",
     "globalize": "^1.2.3",
     "google-map-react": "^1.1.4",
@@ -37,6 +37,7 @@
     "react-addons-shallow-compare": "^15.5.2",
     "react-big-calendar": "^0.17.0",
     "react-chartjs-2": "^2.5.7",
+    "react-chat-ui": "^0.3.2",
     "react-codemirror": "^1.0.0",
     "react-count-down": "^1.1.0",
     "react-credit-card-input": "^1.1.5",
@@ -67,6 +68,7 @@
     "react-router-dom": "^4.1.0",
     "react-router-redux": "^5.0.0-alpha.5",
     "react-scripts": "2.0.3",
+    "react-scroll": "^1.7.14",
     "react-sidebar": "^2.3.2",
     "react-smooth-scrollbar": "^8.0.6",
     "react-speech-recognition": "^1.0.4",
@@ -83,7 +85,6 @@
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.2.0",
     "redux-saga": "^0.16.0",
-    "redux-saga-firebase": "0.10.0",
     "redux-thunk": "^2.2.0",
     "reqwest": "^2.0.5",
     "reselect": "^3.0.0",
