--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ bower_components
 *.sublime-workspace
 
 # IDE - VSCode
+.vscode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -89,3 +90,6 @@ lerna-debug.log
 # System Files
 .DS_Store
 Thumbs.db
+
+#build files
+build/
