--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-google-maps/api": "^1.6.0",
+    "@react-pdf/renderer": "^1.6.8",
     "antd": "^3.10.0",
     "antd-local-icon": "^0.1.3",
     "auth0-lock": "^11.1.2",
