--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "chart.js": "^2.5.0",
     "classnames": "^2.2.5",
     "clone": "^2.1.1",
+    "connected-react-router": "^6.7.0",
+    "core-js": "^3",
     "crypto-js": "^3.1.9-1",
     "d3-shape": "^1.0.6",
     "dotenv": "^8.1.0",
@@ -34,7 +36,7 @@
     "polished": "^1.7.0",
     "postcss-inline-rtl": "^0.9.8",
     "prop-types": "^15.5.10",
-    "react": "^16.5.2",
+    "react": "^16.8.5",
     "react-addons-shallow-compare": "^15.5.2",
     "react-big-calendar": "^0.17.0",
     "react-chartjs-2": "^2.5.7",
@@ -45,7 +47,7 @@
     "react-dates": "12.2.4",
     "react-dnd": "^2.3.0",
     "react-dnd-html5-backend": "^2.3.0",
-    "react-dom": "^16.5.2",
+    "react-dom": "^16.8.5",
     "react-drawer": "^1.2.5",
     "react-dropzone": "^10.1.7",
     "react-dropzone-component": "^3.0.0",
@@ -64,10 +66,8 @@
     "react-perfect-scrollbar": "^0.2.0",
     "react-placeholder": "^2.0.0",
     "react-quill": "^1.2.0",
-    "react-redux": "^5.0.4",
-    "react-router": "^5.1.2",
+    "react-redux": "7.1.1",
     "react-router-dom": "^4.1.0",
-    "react-router-redux": "^5.0.0-alpha.5",
     "react-scripts": "2.0.3",
     "react-scroll": "^1.7.14",
     "react-sidebar": "^2.3.2",
