--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.9.4",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.5",
     "@react-google-maps/api": "^1.6.0",
     "@react-pdf/renderer": "^1.6.8",
     "antd": "^3.10.0",
