--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-scripts": "2.0.3",
     "react-scroll": "^1.7.14",
     "react-sidebar": "^2.3.2",
+    "react-simple-image-slider": "^1.0.2",
     "react-smooth-scrollbar": "^8.0.6",
     "react-speech-recognition": "^1.0.4",
     "react-tag-input": "^4.7.2",
