--- a/package.json
+++ b/package.json
@@ -99,7 +99,8 @@
     "smooth-scrollbar": "^8.2.5",
     "styled-components": "^2.2.1",
     "styled-theme": "^0.3.3",
-    "uppy": "0.18.0"
+    "uppy": "0.18.0",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "babel-polyfill": "^6.26.0",
