--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-motion-drawer": "^2.1.7",
     "react-perfect-scrollbar": "^0.2.0",
     "react-placeholder": "^2.0.0",
+    "react-places-autocomplete": "^7.2.1",
     "react-quill": "^1.2.0",
     "react-redux": "7.1.1",
     "react-resize-image": "^1.0.4",
